--- a/HTML/FlexBox/flex_box_test.html
+++ b/HTML/FlexBox/flex_box_test.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+    <meta charset="UTF-8">
 
-	<style type="text/css">
+    <style type="text/css">
 		
-			#flex {
-  display: flex;
-  flex-flow: row wrap;
-  width: 300px;
-}
-.item {
-  width: 40px;
-}
-	</style>
+        #flex {
+        display: flex;
+        flex-flow: row wrap;
+        width: 300px;
+        }
+        .item {
+        width: 40px;
+        }
+
+        #flex2 {
+            display: flex;
+            flex-direction: row;
+            align-content: space-between;
+        }
+
+    </style>
 
 </head>
 <body>
-	
+
 
 <div id="flex">
-  <div class="item">1</div>
-  <div class="item">2</div>
-  <div class="item">3</div>
-  <div class="item">4</div>
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+</div>
+
+<div id="flex2">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
 </div>
 </body>
 </html>
